# backend/java/housedb-parent/housedb-core/src/main/java/com/rafex/housedb/service/models/MetadataCatalog.java
@@ -1,0 +1,14 @@
+package com.rafex.housedb.service.models;
+
+import java.util.UUID;
+
+public record MetadataCatalog(
+        UUID metadataCatalogId,
+        String metadataTarget,
+        String code,
+        String name,
+        String description,
+        String payloadJson,
+        boolean enabled
+) {
+}
