# backend/java/housedb-parent/housedb-ports/src/main/java/com/rafex/housedb/repository/models/MetadataCatalogEntity.java
@@ -1,0 +1,14 @@
+package com.rafex.housedb.repository.models;
+
+import java.util.UUID;
+
+public record MetadataCatalogEntity(
+        UUID metadataCatalogId,
+        String metadataTarget,
+        String code,
+        String name,
+        String description,
+        String payloadJson,
+        boolean enabled
+) {
+}
