# backend/java/housedb-parent/housedb-transport-jetty/src/main/java/com/rafex/housedb/handlers/metadata/MetadataCatalogsRouterHandler.java
@@ -1,0 +1,40 @@
+package com.rafex.housedb.handlers.metadata;
+
+import com.rafex.housedb.handlers.support.HouseDbErrorMapper;
+import com.rafex.housedb.services.MetadataCatalogService;
+
+import java.util.List;
+import java.util.Set;
+
+import dev.rafex.ether.http.core.HttpExchange;
+import dev.rafex.ether.http.core.Route;
+import dev.rafex.ether.http.jetty12.NonBlockingResourceHandler;
+import dev.rafex.ether.json.JsonCodec;
+
+public final class MetadataCatalogsRouterHandler extends NonBlockingResourceHandler {
+
+    private final ListMetadataCatalogsHandler listMetadataCatalogsHandler;
+
+    public MetadataCatalogsRouterHandler(final JsonCodec jsonCodec, final MetadataCatalogService service) {
+        super(jsonCodec, new HouseDbErrorMapper());
+        listMetadataCatalogsHandler = new ListMetadataCatalogsHandler(service);
+    }
+
+    @Override
+    protected String basePath() {
+        return "/metadata-catalogs";
+    }
+
+    @Override
+    protected List<Route> routes() {
+        return List.of(Route.of("/", Set.of("GET")));
+    }
+
+    @Override
+    public boolean get(final HttpExchange x) {
+        if ("/metadata-catalogs".equals(x.path())) {
+            return listMetadataCatalogsHandler.handle(x);
+        }
+        return false;
+    }
+}
